# Libreland

./: .gitignore  Cargo.toml  Documentation.md  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
contrib/: PKGBUILD  libreland-portals.conf  libreland.desktop  libreland.install  xdg-desktop-portal-wlr.config
contrib/libreland-git/: PKGBUILD  libreland.install
contrib/no-present-timing-layer/: Makefile  PKGBUILD  VkLayer_libreland_no_present_timing.json  no_present_timing.c
output-picker/: Cargo.toml
output-picker/src/: main.rs
polkit-agent/: Cargo.toml
polkit-agent/src/: main.rs
src/: anim.rs  clipboard.rs  color_management.rs  config.rs  cursor.rs  drm.rs  hdr.rs  ipc.rs  keyboard.rs  layout.rs  main.rs  media.rs  render.rs  scanout.rs  screencopy.rs  screenshot.rs  wayland.rs  xwayland.rs
