[package]
name = "libreland"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
authors = ["Morvyk <Morvyk@proton.me>"]
license = "MIT"
description = "A Wayland compositor in pure Rust, configured in Lua."
publish = false

# The compositor is the workspace root; `output-picker` is a sibling
# member — a tiny Wayland *client* (the screencast output chooser), kept
# separate so it doesn't pull the compositor's server-side smithay deps.
# Members share this manifest's profiles, lockfile, target dir, and the
# lint policy below.
[workspace]
resolver = "3"
members = ["output-picker"]

[dependencies]
anyhow = "1.0.102"
# CLI parser for the `libreland msg` IPC client subcommand (derive API).
clap = { version = "4.6.1", features = ["derive"] }
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
# Pure-Rust PNG encoder for the built-in screenshot tool (no C deps).
png = "0.18.1"
# JSON IPC: request/response + event-stream (de)serialization for the
# control socket and the `libreland msg` client.
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
smithay = { version = "0.7.0", default-features = false, features = ["backend_drm", "backend_egl", "backend_gbm", "backend_libinput", "backend_session_libseat", "backend_udev", "renderer_gl", "wayland_frontend", "desktop"] }
# `local-offset` lets screenshot filenames use local time; the UTC offset
# is captured once at startup (on the main thread) because the per-call
# now_local() is unreliable once the process is multithreaded.
time = { version = "0.3.47", features = ["formatting", "macros", "local-offset"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
# XCursor theme loading for the compositor's own pointer cursor. We
# read $XCURSOR_THEME / $XCURSOR_SIZE (same env the rest of the
# desktop uses) and render the theme's `default` cursor instead of a
# hardcoded sprite.
xcursor = "0.3.10"
xdg = "3.0.0"
xkbcommon = "0.8"

# Lint policy is defined once at the workspace level and pulled into every
# member via `[lints] workspace = true`, so the compositor and the picker
# share it. Unsafe code is forbidden by default; when genuinely required,
# override at the smallest scope with
#   #[allow(unsafe_code, reason = "…")]
# alongside a `// SAFETY:` comment on the block itself.
[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "deny"

# clippy::all is treated as hard errors; clippy::pedantic as warnings we
# are expected to fix at the source. Reach for #[allow(name, reason = "…")]
# only when satisfying the lint is genuinely impossible or actively wrong.
[workspace.lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# dev is tuned for pure compile speed — used for every build, test, and
# clippy invocation. The mold linker is enabled globally in .cargo/config.toml,
# which contributes most of the dev-time win.
[profile.dev]
opt-level       = 0
debug           = true
incremental     = true
codegen-units   = 256
split-debuginfo = "unpacked"

# release is tuned for pure runtime performance. Fat LTO costs compile
# time we don't pay in dev in exchange for the best possible codegen, and
# stripping symbols keeps the shipped binary lean.
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
debug         = false
strip         = "symbols"
