[package]
name = "libreland-polkit-agent"
version = "0.3.0"
edition = "2024"
rust-version = "1.97.0"
authors = ["Morvyk <Morvyk@proton.me>"]
license = "MIT"
description = "PolicyKit authentication agent for Libreland — registers with polkitd and drives a themed quickshell password dialog over a unix socket."
publish = false

[lints]
workspace = true

[dependencies]
anyhow = "1"
# Async D-Bus. `tokio` feature routes zbus onto the tokio reactor (default is
# async-io); we want a single tokio runtime for the bus, the helper subprocess
# and the quickshell socket, so we disable the default async-io integration.
zbus = { version = "5", default-features = false, features = ["tokio"] }
# One runtime for everything: the D-Bus connection, the polkit-agent-helper-1
# child (async pipes), and the unix socket to the quickshell dialog.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "io-util", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Safe wrappers for getuid()/getpwuid_r() — resolve a polkit identity's uid to
# the username polkit-agent-helper-1 expects on argv. Avoids an unsafe libc FFI
# (this workspace denies unsafe_code).
nix = { version = "0.29", default-features = false, features = ["user"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
